--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.21.3",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
